<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:keepScreenOn="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_portrait"
        >

        <RelativeLayout
            android:id="@+id/LL1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/sign"
            android:layout_marginTop="@dimen/small_margin_top">

            <TextView
                android:id="@+id/text1"
                style="@style/biggerTextStyle"
                android:layout_centerInParent="true"
                android:text="@string/text_1" />

            <TextView
                android:id="@+id/text1_add"
                style="@style/smallerTextStyle"
                android:layout_below="@id/text1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:text="@string/text_1_add" />

        </RelativeLayout>

        <TextView
            android:id="@+id/text2"
            style="@style/infoTextStyle"
            android:layout_below="@+id/LL1"
            android:drawableLeft="@drawable/fbook"
            android:focusableInTouchMode="true"
            android:text="@string/text_2" />

        <TextView
            android:id="@+id/text3"
            style="@style/infoTextStyle"
            android:layout_below="@+id/text2"
            android:drawableLeft="@drawable/map"
            android:onClick="goToAddress"
            android:text="@string/text_3" />

        <TextView
            android:id="@+id/text4"
            style="@style/infoTextStyle"
            android:layout_below="@+id/text3"
            android:autoLink="phone"
            android:drawableLeft="@drawable/phone"
            android:text="@string/text_4"
             />

        <TextView
            android:id="@+id/text5"
            style="@style/infoTextStyle"
            android:layout_below="@+id/text4"
            android:drawableLeft="@drawable/web"
            android:focusableInTouchMode="true"
            android:text="@string/text_5"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:adjustViewBounds="true"
            android:src="@drawable/cakes" />

    </RelativeLayout>

</ScrollView>
